# geek-back

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  service.yml
.github/workflows/: ci.yml  cleanup.yml  deploy-command.yml
alembic/: env.py
alembic/versions/: 99e68c15ff30_add_catalog_tables.py
docs/: adding-a-provider.md  architecture.md
requirements/: base.txt  dev.txt
src/geekbaku/: composition.py
src/geekbaku/application/aggregation/: deduplication.py  dto.py  engine.py  metrics.py  normalization.py  ranking.py
src/geekbaku/application/catalog/: dto.py  mappers.py  ports.py
src/geekbaku/application/common/: pagination.py  unit_of_work.py
src/geekbaku/application/identity/: dto.py  loaders.py  mappers.py  ports.py  registry.py
src/geekbaku/application/ingestion/: dto.py
src/geekbaku/application/playback/: catalog_lookup.py  dto.py  mappers.py  ports.py  session_store.py  source_resolver.py
src/geekbaku/application/providers/: cache.py  circuit_breaker.py  dto.py  exceptions.py  factory.py  health.py  manager.py  mappers.py  normalizers.py  ports.py  rate_limiter.py  registry.py  retry.py  scheduler.py  stats.py
src/geekbaku/application/search/: ports.py
src/geekbaku/config/: logging.py  settings.py
src/geekbaku/domain/catalog/: entities.py  exceptions.py  services.py  value_objects.py
src/geekbaku/domain/identity/: entities.py  exceptions.py  services.py  value_objects.py
tests/e2e/api/: test_health.py
tests/integration/aggregation/: test_multi_provider_aggregation.py
tests/integration/api/: test_auth_api.py  test_ingestion_api.py  test_public_api.py
tests/integration/playback/: test_playback_api.py
(+183 files in other folders)
