[project]
name = "geekbaku-backend"
version = "0.1.0"
description = "GeekBaku backend - streaming catalog aggregation API"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "PyJWT>=2.9,<3.0",
    "argon2-cffi>=23.1,<24.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "respx>=0.21,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "pre-commit>=3.8,<4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geekbaku"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# B008: FastAPI's `Depends(...)` in argument defaults is the idiomatic,
# documented pattern (https://fastapi.tiangolo.com/tutorial/dependencies/),
# not the footgun this rule targets in general Python code.
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["src/geekbaku"]
